deploy/pachyderm/pachd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pachd
  namespace: pachyderm
  labels:
    app: pachd
    suite: pachyderm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pachd
      suite: pachyderm
  template:
    metadata:
      labels:
        app: pachd
        suite: pachyderm
    spec:
      serviceAccountName: pachyderm
      containers:
      - name: pachd
        image: pachyderm/pachd:1.12.5
        imagePullPolicy: IfNotPresent
        command: ["/pachd"]
        ports:
        - containerPort: 650
          name: api-grpc-port
          protocol: TCP
        - containerPort: 651
          name: trace-port
        - containerPort: 652
          name: api-http-port
          protocol: TCP
        - containerPort: 653
          name: peer-port
          protocol: TCP
        - containerPort: 655
          name: api-git-port
          protocol: TCP
        - containerPort: 654
          name: saml-port
          protocol: TCP
        - containerPort: 657
          name: oidc-port
          protocol: TCP
        - containerPort: 600
          name: s3gateway-port
          protocol: TCP
        - containerPort: 656
          name: prometheus-port
          protocol: TCP
        readinessProbe:
          exec:
            command: ["/pachd", "--readiness"]
        resources:
          requests:
            cpu: 250m
            memory: 512M
        volumeMounts:
        - name: pach-disk
          mountPath: /pach
        - name: pachyderm-storage-secret
          mountPath: /pachyderm-storage-secret
      volumes:
      - name: pach-disk
        persistentVolumeClaim:
          claimName: pachd-storage
      - name: pachyderm-storage-secret
        secret:
          secretName: pachyderm-storage-secret
---
apiVersion: v1
kind: Service
metadata:
  name: pachd
  namespace: pachyderm
  labels:
    app: pachd
    suite: pachyderm
  annotations:
    prometheus.io/port: "656"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  selector:
    app: pachd
  ports:
  - name: api-grpc-port
    port: 650
    targetPort: 650
  - name: trace-port
    port: 651
    targetPort: 651
  - name: api-http-port
    port: 652
    targetPort: 652
  - name: saml-port
    port: 654
    targetPort: 654
  - name: api-git-port
    port: 655
    targetPort: 655
  - name: prometheus-metrics
    port: 656
    targetPort: 656
  - name: oidc-port
    port: 657
    targetPort: 657
  - name: s3gateway-port
    port: 600
    targetPort: 600
---
apiVersion: v1
kind: Service
metadata:
  name: pachd-peer
  namespace: pachyderm
  labels:
    app: pachd
    suite: pachyderm
spec:
  type: ClusterIP
  selector:
    app: pachd
  ports:
  - name: api-grpc-peer-port
    port: 30653
    targetPort: 653
