deploy/pachyderm/pachd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pachd-ingress
  namespace: pachyderm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - host: pachd.transparentlyrotatableproxy.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pachd
            port:
              number: 650
  tls:
  - hosts:
    - pachd.transparentlyrotatableproxy.me
    secretName: pachd-transparentlyrotatableproxy-me-tls
